# learning

./: .gitignore  README.md  main.py
api/api_v1/: api.py
api/api_v1/endpoints/: ner.py
api/api_v1/schemas/: ner_text.py
api/api_v2/endpoints/: ner.py
archived/cv/carvana-unet/: .gitignore  LICENSE  README.md  carvana-unet-segmentation.ipynb
archived/data_eng/eq_ws/: EQ_Works_Schema  README.md  common_problems.ipynb  dag_candidate_final.py
archived/mlops/e2e-pycaret/: requirements.txt
archived/nlp/altaml_coding_summarizer/: README.md
archived/nlp/ner-api/: main.py
cs197-F2022L5/: harvard_ViT.ipynb
cv/cs197-F2022L5/: requirements.txt
e2e-pycaret/: requirements.txt
nlp/annotated_transformer/: README.md
nlp/annotated_transformer/model/: attention.py  decoder.py  encoder.py  encoder_decoder.py  utils.py
nlp/ner-api/: .gitignore
notes/mechanistic_interpretability/: notes.md
notes/quantization/: .python-version  NOTES.md  requirements.txt
notes/train-sLLM/: datasets.md  models.md  notes.md
notes/uncensored_models/: notes.md
quantization/: .gitignore  NOTES.md
tutorials/: todo.md
tutorials/UvA-DL/: README.md
tutorials/UvA-DL/torch/: 2_intro_to_torch.py  4_optimization_and_init.md  5_cnn_architectures.md  6_transformers.md  pyproject.toml
tutorials/UvA-DL/torch/intro_to_torch/: NOTES.md  main.py
tutorials/UvA-DL/torch/tutorial_6/: 6_transformers.md  MHA.py  requirements.txt
tutorials/axolotl/: notes.md
tutorials/griptape/chatbots/: app.py  pyproject.toml
tutorials/mergekit/: notes.md
(+19 files in other folders)
